# AGNi_pureMIUI

./: .gitignore  .gitmodules  AGNi_version.sh  AboutEscrima  Android.bp  Android.mk  AndroidKernel.mk  CONTRIBUTIONS  Kbuild  MAINTAINERS  Makefile  Makefile.am  README  abi_generate.sh  anykernel.sh  ap.c  atheros.c  basic.c  bengal-camera-sensor-idp-v3.dtsi  bengal-camera.dtsi  blair-camera-sensor-cdp.dtsi  blair-camera-sensor-mtp.dtsi  blair-camera-sensor-qrd.dtsi  blair-camera.dtsi  build.config.aarch64  build.config.arm  build.config.common  build.config.x86_64  build.sh  build_kernel.sh  build_kernel_Kali-NetHunter.sh  build_kernel_all.sh  build_kernel_all_n.sh  build_kernel_aospQ.sh  build_kernel_aospQR.sh  build_kernel_aospR.sh  build_kernel_aospR0.sh  build_kernel_aospR_permissive.sh  build_kernel_dior_cmN.sh  build_kernel_haydn.sh  (+94 more)
AnyKernel2/: anykernel.sh
techpack/audio/: Makefile  Makefile.am
techpack/audio/4.0/: Makefile
techpack/audio/4.0/asoc/: Kbuild  kona.c  msm-compress-q6-v2.c  msm-dai-fe.c  msm-pcm-routing-v2.c  sm6150.c
techpack/audio/4.0/config/: atollauto.conf  atollautoconf.h
techpack/audio/4.0/dsp/: Kbuild  apr_elliptic.c  audio_cal_utils.c  elliptic.c  elliptic_mixer_controls.c  elliptic_sysfs.c  elliptic_version.h  msm_audio_ion.c  q6_init.c  q6_init.h  q6adm.c  q6afe.c  q6asm.c  q6audio-v2.c  q6core.c
techpack/audio/asoc/: Kbuild  bengal.c  gvm_auto_spf_dummy.c  kona.c  lahaina-port-config.h  lahaina.c  msm-audio-effects-q6-v2.c  msm-compress-q6-v2.c  msm-dai-fe.c  msm-dai-q6-hdmi-v2.c  msm-dai-q6-v2.c  msm-lsm-client.c  msm-pcm-host-voice-v2.c  msm-pcm-loopback-v2.c  msm-pcm-q6-noirq.c  msm-pcm-q6-v2.c  msm-pcm-routing-auto.c  msm-pcm-routing-v2.c  msm-pcm-routing-v2.h  msm-qti-pp-config.c  msm_dailink.h  sa6155.c  sa8155.c  sdm660-external.c  sm6150.c  sm8150.c
techpack/audio/config/: arauto.conf  bengalauto.conf  gvmauto.conf  holiauto.conf  konaauto.conf  lahainaauto.conf  lahainaautoconf.h  litoauto.conf  qcs405auto.conf  sa6155auto.conf  sa8155auto.conf  sa8295gvmauto.conf  sm6150auto.conf  sm6150autoconf.h  sm8150auto.conf  sm8150autoconf.h
techpack/audio/dsp/: Kbuild  apr_elliptic.c  apr_mius.c  msm-cirrus-playback.c  q6_init.c  q6_init.h  q6adm.c  q6afe.c  q6asm.c  q6audio-v2.c  q6core.c  q6lsm.c  q6voice.c
techpack/audio/ipc/: Kbuild  apr.c  apr_vm.c
techpack/audio/soc/: Kbuild  pinctrl-lpi.c  snd_event.c  swr-mstr-ctrl.c  swr-mstr-ctrl.h  swr-mstr-registers.h  swr-slave-port-config.h
(+6993 files in other folders)
